remove height 200vh from css main to prevent overstretching onto footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
+
 h2, h3, p {
     color: white;
 }
@@ -40,6 +41,7 @@ div.footer {
     height: 3em;
     position: relative;
     width: 100%;
+    margin-top: auto;
 }
 
 
@@ -113,7 +115,6 @@ nav {
 
 
 main {
-    height: 200vh;
     background-color: rgb(96, 129, 38);
 }
 
